# rytmi-pub

./: .claudeignore  .gitignore  CLAUDE.md  LICENSE  README.md  download_youtube.sh  pyproject.toml  requirements-demo.txt  start_jupyter.sh
.github/: copilot-instructions.md
.github/instructions/: docs.instructions.md  dsp.instructions.md  llm-prompts.instructions.md  tests.instructions.md
data/eval/: kizomba_listening_notes.yaml
demo_assets/: README.md
demo_assets/diagrams/: architecture.mmd
docs/: audio-sources.md  demo_storyboard.md  eval-set-guide.md  gemma-kaggle-compo.md  how-it-works.md  kaggle_writeup.md  project-vision.md  submission-checklist.md
docs/research/: README.md  (+17 more)
notebooks/: 00_demo.ipynb  00_demo_outputs.41-lite-on.md  00_demo_outputs.post-40e.md  00_demo_outputs.pre-40e.md  01_audio_loading.ipynb  02_onset_beat_detection.ipynb  03_visualization.ipynb  04_gemma_basics.ipynb  05_batch_analysis.ipynb  06_kizomba_batida_check.ipynb  07_kizomba_tutor.ipynb  08_tap_capture.ipynb  09_kizomba_extended.ipynb  09_kizomba_extended_outputs.41-lite-on.md  09_kizomba_extended_outputs.post-40e.md  09_kizomba_extended_outputs.pre-40e.md  _build_kaggle_cache.ipynb  gemma-dancing.ipynb  kaggle_demo.ipynb
scripts/: _make_cache_notebook.py  _make_kaggle_demo_notebook.py  backfill_tap_offsets.py  build_kaggle_cache.py  download_samples.py  eval_kizomba_beats.py  find_fma_samples.py
tests/: conftest.py  test_audio.py  test_dsp.py  test_eval_kizomba_beats.py  test_gemma_downbeat.py  test_listening_notes.py  test_llm.py  test_prompts.py  test_smoke.py  test_styles.py  test_tap_capture.py  test_tap_consensus.py  test_transcribe.py  test_viz.py  test_vocal_activity.py
(+111 files in other folders)
