[build-system]
requires = ["setuptools>=75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rytmi"
version = "0.1.0"
description = "Rhythm learning prototype with DSP analysis and Gemma explanations"
requires-python = ">=3.13"
license = "MIT"
dependencies = [
    "librosa>=0.11.0",
    "scipy>=1.14",
    "soundfile>=0.13.0",
    "standard-aifc",
    "standard-sunau",
    "matplotlib>=3.8",
    "numpy>=2.0",
]

[project.optional-dependencies]
llm = [
    "torch>=2.6",
    "transformers>=4.50",
    "accelerate>=1.3",
    "bitsandbytes>=0.45",
    "sentencepiece>=0.2",
    "protobuf>=4.25",
]
cloud = [
    "openai>=1.0",
]
notebook = [
    "jupyter>=1.1",
    "ipywidgets>=8.1",
]
app = [
    "gradio>=5.0",
]
vocals = [
    "demucs>=4.0",
]
downbeat = [
    # BeatNet ships a CNN+DBN downbeat tracker that pairs cleanly with our
    # librosa beat grid for fusion in `detect_downbeats`.  madmom must come
    # from upstream Git on Python ≥ 3.10 because the PyPI 0.16.1 release uses
    # the removed `collections.MutableSequence` import.
    "BeatNet>=1.1.1",
    "madmom @ git+https://github.com/CPJKU/madmom.git@main",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.9",
    "rytmi[notebook]",
]
all = [
    "rytmi[llm,cloud,notebook,app,vocals,downbeat,dev]",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "gpu: marks tests that require GPU",
]

[tool.ruff]
target-version = "py313"
line-length = 99
